--- a/initiatives.html
+++ b/initiatives.html
@@ -392,11 +392,10 @@
                     >Current Focus</span
                   >
                   <h3 class="text-2xl font-bold text-brand-dark-green">
-                    Housing Task Force
+                    UDO Reform Initiative
                   </h3>
                   <p class="text-brand-light-green font-semibold">
-                    Ensuring Housing Remains Affordable for Our Community
-                    Workforce
+                    Keeping Overland Park Within Reach of its Community
                   </p>
                 </div>
               </div>
