--- a/mission.html
+++ b/mission.html
@@ -185,7 +185,7 @@
                 class="bg-brand-gray p-8 rounded-lg shadow-md border border-neutral-200"
               >
                 <h3 class="text-2xl font-bold text-brand-dark-green mb-4">
-                  Leveraging FrameworkOP
+                  Leveraging <a href="https://www.opkansas.org/city-services/planning-development/long-range-planning/comprehensive-plan/" target="_blank" rel="noopener noreferrer" class="text-brand-light-green font-semibold hover:underline">FrameworkOP</a>
                 </h3>
                 <p class="text-neutral-700">
                   In May 2025, the City of Overland Park adopted
@@ -196,7 +196,7 @@
                     class="text-brand-light-green font-semibold hover:underline"
                     >FrameworkOP</a
                   >, its official comprehensive plan. This document provides a
-                  clear roadmap for the city's future. We use FrameworkOP as a
+                  clear roadmap for the city's future. We use <a href="https://www.opkansas.org/city-services/planning-development/long-range-planning/comprehensive-plan/" target="_blank" rel="noopener noreferrer" class="text-brand-light-green font-semibold hover:underline">FrameworkOP</a> as a
                   foundational guide, aligning our efforts with the city's own
                   stated goals to ensure our advocacy is focused, constructive,
                   and effective.
@@ -396,7 +396,7 @@
                 </p>
                 <p class="text-neutral-700">
                   By aligning our efforts with the city's own comprehensive plan
-                  (FrameworkOP), we ensure our advocacy is constructive and
+                  (<a href="https://www.opkansas.org/city-services/planning-development/long-range-planning/comprehensive-plan/" target="_blank" rel="noopener noreferrer" class="text-brand-light-green font-semibold hover:underline">FrameworkOP</a>), we ensure our advocacy is constructive and
                   builds on existing municipal priorities.
                 </p>
               </div>
