Add 2025 election coverage: mayoral forums analysis and voter research guide
- Created mayoral-forums-2025.html with nonpartisan side-by-side forum analysis
- Created voter-research-guide-2025.html with comprehensive election resources
- Added election banner to index.html (dismissible, localStorage-based)
- Updated updates.html with featured mayoral forums post and voter guide link
- Updated localinfo.html hero with voter research guide button
- Organized election assets in assets/images/election/2025-mayoral/
- Removed Nextdoor screenshots and references per privacy considerations
- Archived source markdown files to archive/deprecated_files/
- Updated rename_ledger.csv with all file movements and deletions

--- a/localinfo.html
+++ b/localinfo.html
@@ -127,11 +127,14 @@
                 <h1 class="text-4xl md:text-5xl font-bold text-brand-dark-green leading-tight mb-4">Local Info - Overland Park</h1>
                 <p class="text-lg md:text-xl text-neutral-700 max-w-3xl mx-auto mb-8">Everything you need to know about your local government, services, and community resources.</p>
                 
-                <!-- Find My Ward Button -->
-                <div class="mt-8">
+                <!-- Action Buttons -->
+                <div class="mt-8 flex flex-col sm:flex-row gap-4 justify-center items-center">
                     <button id="find-ward-button" class="bg-brand-light-green text-white px-8 py-4 rounded-full font-bold text-lg hover:bg-brand-dark-green transition-transform transform hover:scale-105 shadow-lg">
                         🗺️ Find My Ward
                     </button>
+                    <a href="voter-research-guide-2025.html" class="bg-white text-brand-dark-green px-8 py-4 rounded-full font-bold text-lg hover:bg-neutral-100 transition-transform transform hover:scale-105 shadow-lg border-2 border-brand-dark-green">
+                        🗳️ 2025 Voter Research Guide
+                    </a>
                 </div>
             </div>
         </section>
