--- a/mayoral-forums-2025.html
+++ b/mayoral-forums-2025.html
@@ -499,7 +499,7 @@
                             <div class="border-l-4 border-neutral-400 pl-4">
                                 <h4 class="font-bold text-neutral-900 mb-2">Mayor Curt Skoog</h4>
                                 <p class="text-neutral-700">
-                                    Positions OP as a welcoming city, including LGBTQ+ residents, aligning partnerships and policies accordingly. <span class="text-sm text-neutral-500">(reporting)</span>
+                                    Positions OP as a welcoming city, in accordance with FrameworkOP. <span class="text-sm text-neutral-500">(reporting)</span>
                                 </p>
                             </div>
                             
@@ -663,7 +663,7 @@
                                             <span class="inline-block mr-2" aria-hidden="true">🤝</span>
                                             Inclusion / DEI
                                         </td>
-                                        <td class="px-6 py-4 text-neutral-700">"Welcoming city," including LGBTQ+ residents.</td>
+                                        <td class="px-6 py-4 text-neutral-700">"Welcoming City" in acccordance with FrameworkOP</td>
                                         <td class="px-6 py-4 text-neutral-700">Emphasizes merit-based hiring; opposes DEI/CRT as filters.</td>
                                     </tr>
                                     <tr class="hover:bg-brand-light50 transition-colors category-services">
