--- a/mayoral-forums-2025.html
+++ b/mayoral-forums-2025.html
@@ -319,7 +319,7 @@
                             
                             <div>
                                 <h4 class="font-semibold text-neutral-900 text-sm mb-1">Audience Format:</h4>
-                                <p class="text-neutral-700 text-sm">The event followed a town hall format, where audience reactions and interjections occurred.</p>
+                                <p class="text-neutral-700 text-sm">The event followed standard public forum guidelines—standard rules of decorum for public forums to ensure fairness and order.</p>
                             </div>
                         </div>
                     </div>
